# textual-editor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: app.py
src/textual_editor/: __init__.py  cli.py  demo.py  editor.py
